--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div class="container-2">
             <h2>CHALLENGE 3: Rock Paper Scissors</h2>        
             <div class="flex-box-rps" id="flex-box-rps-div">
-                <img id="rock" src="../images/rock.jpg" height=150 width=150 alt="rock" onClick="rpsGame(this)">
-                <img id="paper" src="../images/paper.jpg" height=150 width=150 alt="paper" onClick="rpsGame(this)">
-                <img id="scissors" src="../images/scissors.png" height=150 width=150 alt="scissors" onClick="rpsGame(this)">
+                <img id="rock" src="./images/rock.jpg" height=150 width=150 alt="rock" onClick="rpsGame(this)">
+                <img id="paper" src="./images/paper.jpg" height=150 width=150 alt="paper" onClick="rpsGame(this)">
+                <img id="scissors" src="./images/scissors.png" height=150 width=150 alt="scissors" onClick="rpsGame(this)">
             </div>
             <div class="btnn" id='btn'></div>
         </div>
