--- a/index.html
+++ b/index.html
@@ -59,6 +59,45 @@
                 <button class="btn btn-success">Facebook</button>
             </div>
         </div>
+
+        <div class="container-4">
+            <h2>Challenge 5:Blackjack</h2>
+            <h3><span id="Result">LetsPlay</span></h3>
+
+            <div>
+                <div class="flex-box-container-row1">
+                    <div>
+                        <h2>You: <span id="You-result">0</span></h2>
+                    </div>
+                    <div>
+                        <h2>Dealer: <span id="Dealer-result">0</span></h2>
+                    </div>
+                </div>
+
+                <div class="flex-box-container-row2">
+                    <div>
+                        <button class="btn-lg btn-primary mr-2">Hit</button>
+                        <button class="btn-lg btn-warning mr-2">Stand</button>
+                        <button class="btn-lg btn-danger">Draw</button>
+                    </div>
+                </div>
+
+                <div class="flex-box-container-row3">
+                    <table>
+                        <tr>
+                            <th>Wins</th>
+                            <th>Losses</th>
+                            <th>Draw</th>
+                        </tr>
+                        <tr>
+                            <td><span>0</span></td>
+                            <td><span>0</span></td>
+                            <td><span>0</span></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
         <script src="home.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
         
