--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
                 <div class="flex-box-container-row2">
                     <div>
-                        <button class="btn-lg btn-primary mr-2" id="button-hit">Hit</button>
-                        <button class="btn-lg btn-warning mr-2" id="button-stand">Stand</button>
-                        <button class="btn-lg btn-danger" id="button-draw">Draw</button>
+                        <button class="btn-lg btn-primary m-2" id="button-hit">Hit</button>
+                        <button class="btn-lg btn-warning m-2" id="button-stand">Stand</button>
+                        <button class="btn-lg btn-danger" id="button-deal">Deal</button>
                     </div>
                 </div>
 
