--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                             <th>Draw</th>
                         </tr>
                         <tr>
-                            <td><span>0</span></td>
-                            <td><span>0</span></td>
-                            <td><span>0</span></td>
+                            <td><span id="wins">0</span></td>
+                            <td><span id="losses">0</span></td>
+                            <td><span id="draws">0</span></td>
                         </tr>
                     </table>
                 </div>
